--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="x">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,53 +16,52 @@
     <script src="/static/js/sockjs.min.js"></script>
     <script src="/static/js/x.js"></script>
 </head>
+
 <body ng-controller="XController">
     <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">X</a>
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">X</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="javascript:;" ng-click="login()">Login</a></li>
+                    <li><a href="javascript:;">Logout</a></li>
+                </ul>
+            </div>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="javascript:;" ng-click="login()">Login</a></li>
-            <li><a href="javascript:;">Logout</a></li>
-          </ul>
-        </div>
-      </div>
     </nav>
-
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-3 col-md-2 sidebar">
-          <ul class="nav nav-sidebar">
-            <li ng-repeat="contact in contacts">
-                <a href="#">{{contact.name}}</a>
-            </li>
-          </ul>
-        </div>
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-
-          <div class="row">
-            <div class="col-xs-6 col-sm-3">
-                <div class="chat-box">
-                    <div class="messages">
-                        asdf<br>
-                        asdf<br>
-                        asdf<br>
+        <div class="row">
+            <div class="col-sm-3 col-md-2 sidebar">
+                <ul class="nav nav-sidebar">
+                    <li ng-repeat="contact in contacts">
+                        <a href="#" ng-click="newWindow(contact.name)">{{contact.name}}</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+                <div class="row">
+                    <div class="col-xs-6 col-sm-3" ng-repeat="window in windows">
+                        <div class="chat-box" ng-controller="WindowController">
+                            <ul class="messages">
+                                <li ng-repeat="message in messages">
+                                    {{message.body}}
+                                </li>
+                            </ul>
+                            <input class="input-send" data-to="rauf">
+                        </div>
                     </div>
-                    <input class="input-send" data-to="rauf">
                 </div>
             </div>
-          </div>
-
         </div>
-      </div>
     </div>
 </body>
+
 </html>
