--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="x">
+<html lang="en" ng-app="main">
 
 <head>
     <meta charset="utf-8">
@@ -17,7 +17,7 @@
     <script src="/static/js/x.js"></script>
 </head>
 
-<body ng-controller="XController">
+<body ng-controller="MainController">
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -50,12 +50,13 @@
                 <div class="row">
                     <div class="col-xs-6 col-sm-3" ng-repeat="window in windows">
                         <div class="chat-box" ng-controller="WindowController">
+                            <h4>{{to}}</h4>
                             <ul class="messages">
                                 <li ng-repeat="message in messages">
                                     {{message.body}}
                                 </li>
                             </ul>
-                            <input class="input-send" data-to="rauf">
+                            <input class="input-send" ng-model="text" x-enter="send()">
                         </div>
                     </div>
                 </div>
