--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="row">
                     <div class="col-xs-6 col-sm-3" ng-repeat="window in windows">
                         <div class="chat-box" ng-controller="WindowController">
-                            <h4>{{to}}</h4>
+                            <h4>{{peer}}</h4>
                             <ul class="messages">
                                 <li ng-repeat="message in messages">
                                     {{message.body}}
