--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>X</title>
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/x.css" rel="stylesheet">
+    <link href="/static/css/evil.css" rel="stylesheet">
     <script src="/static/js/angular.min.js"></script>
     <script src="/static/js/sockjs.min.js"></script>
-    <script src="/static/js/x.js"></script>
+    <script src="/static/js/evil.js"></script>
 </head>
 
 <body ng-controller="MainController">
@@ -23,7 +23,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">X</a>
+                <a class="navbar-brand" href="#">Evil Chat</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
