--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>X</title>
+    <title>Evil Chat</title>
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/evil.css" rel="stylesheet">
     <script src="/static/js/angular.min.js"></script>
