--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 {{peer}}
                                 <button ng-click="closeWindow(thread)" type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                             </h4>
-                            <ul class="messages">
+                            <ul class="messages" x-scroll-bottom>
                                 <li ng-repeat="message in messages">
                                     {{message.body}}
                                 </li>
