--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="col-sm-3 col-md-2 sidebar">
                 <ul class="nav nav-sidebar">
                     <li ng-repeat="contact in contacts">
-                        <a href="#" ng-click="newWindow(contact.name)">{{contact.name}}</a>
+                        <a href="#" ng-click="newWindow(contact)">{{contact.name}}</a>
                     </li>
                 </ul>
             </div>
@@ -47,7 +47,7 @@
                     <div class="col-xs-6 col-sm-3" ng-repeat="window in windows">
                         <div class="chat-box" ng-controller="WindowController">
                             <h4>
-                                {{peer}}
+                                {{contact.name}}
                                 <button ng-click="closeWindow(thread)" type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                             </h4>
                             <ul class="messages" x-scroll-bottom>
