add evil favicon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Evil Chat</title>
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/evil.css" rel="stylesheet">
+    <link rel="shortcut icon" href="/favicon.ico">
     <script src="/static/js/angular.min.js"></script>
     <script src="/static/js/sockjs.min.js"></script>
     <script src="/static/js/evil.js"></script>
