--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Evil Chat</title>
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/evil.css" rel="stylesheet">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Raleway:400,300,600" type="text/css">
+    <link rel="stylesheet" href="/static/css/normalize.css">
+    <link rel="stylesheet" href="/static/css/skeleton.css">
+    <link rel="stylesheet" href="/static/css/evil.css">
     <link rel="shortcut icon" href="/favicon.ico">
     <script src="/static/js/angular.min.js"></script>
     <script src="/static/js/sockjs.min.js"></script>
@@ -15,52 +16,27 @@
 </head>
 
 <body ng-controller="MainController">
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Evil Chat</a>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li ng-hide="loggedIn"><a href="javascript:;" ng-click="login()">Login</a></li>
-                    <li ng-show="loggedIn"><a href="javascript:;" ng-click="logout()">Logout</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-sm-3 col-md-2 sidebar">
-                <ul class="nav nav-sidebar">
-                    <li ng-repeat="contact in contacts">
-                        <a href="#" ng-click="newWindow(contact)">{{contact.name}}</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                <div class="row">
-                    <div class="col-xs-6 col-sm-3" ng-repeat="window in windows">
-                        <div class="chat-box" ng-controller="WindowController">
-                            <h4>
-                                {{contact.name}}
-                                <button ng-click="closeWindow(thread)" type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                            </h4>
-                            <ul class="messages" x-scroll-bottom>
-                                <li ng-repeat="message in messages">
-                                    {{message.body}}
-                                </li>
-                            </ul>
-                            <input class="input-send" ng-model="text" x-enter="send()">
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div id="sidebar">
+        <ul id="contacts">
+            <li class="contact" ng-repeat="contact in contacts">
+                <a href="#" ng-click="newWindow(contact)">{{contact.name}}</a>
+            </li>
+        </ul>
+        <a href="javascript:;" ng-click="login()">Login</a>
+        <a href="javascript:;" ng-click="logout()">Logout</a>
+    </div>
+    <div id="windows">
+        <div class="window" ng-controller="WindowController" ng-repeat="window in windows">
+            <h4>
+                {{contact.name}}
+                <a href="#" ng-click="closeWindow(thread)" class="close">&times;</a>
+            </h4>
+            <ul class="messages" x-scroll-bottom>
+                <li ng-repeat="message in messages">
+                    {{message.body}}
+                </li>
+            </ul>
+            <input class="input-send" ng-model="text" x-enter="send()">
         </div>
     </div>
 </body>
