--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="javascript:;" ng-click="closeWindow(thread)" class="close">&times;</a>
             </h4>
             <ul class="messages" x-scroll-bottom>
-                <li ng-repeat="message in messages">
+                <li class="message" ng-repeat="message in messages">
                     {{message.body}}
                 </li>
             </ul>
