--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 {{contact.name}}
                 <a href="javascript:;" ng-click="closeWindow(thread)" class="close">&times;</a>
             </h4>
-            <ul class="messages" x-scroll-bottom>
+            <ul class="messages" x-scroll-bottom x-no-scroll-parent>
                 <li class="message" ng-repeat="message in messages">
                     {{message.body}}
                 </li>
