--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="window" ng-controller="WindowController" ng-repeat="window in windows">
             <h4>
                 {{contact.name}}
-                <a href="javascript:;" ng-click="closeWindow(thread)" class="close">&times;</a>
+                <a href="javascript:;" ng-click="closeWindow(thread)" class="close" tabIndex="-1">&times;</a>
             </h4>
             <ul class="messages" x-scroll-bottom x-no-scroll-parent>
                 <li class="message" ng-repeat="message in messages">
